--- a/07.StudentRegister/app/src/main/res/layout/activity_main.xml
+++ b/07.StudentRegister/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,9 @@
 
         </android.support.design.widget.AppBarLayout>
 
-        <include layout="@layout/content_main" />
+        <include layout="@layout/content_main"
+            android:id="@+id/layout_content_main"
+            />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
