feat: Add new functional activity to add books

--- a/08.EBookShop/app/src/main/res/layout/activity_main.xml
+++ b/08.EBookShop/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
             android:onClick="@{clickHandlers::onFABClicked}"
-            app:srcCompat="@android:drawable/ic_dialog_email" />
+            app:srcCompat="@android:drawable/ic_input_add" />
 
     </FrameLayout>
 
