--- a/11.TMDBClient/app/src/main/res/layout/activity_movie.xml
+++ b/11.TMDBClient/app/src/main/res/layout/activity_movie.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="movie"
+            type="com.androidtutz.anushka.tmdbclient.model.Movie" />
+    </data>
+<android.support.design.widget.CoordinatorLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.MovieActivity">
@@ -33,6 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
+                bind:posterPath="@{movie.posterPath}"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"/>
         </RelativeLayout>
@@ -48,8 +57,13 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_movie" />
+    <include layout="@layout/content_movie"
+        android:id="@+id/secondary_layout"
+        bind:secondaryMovie="@{movie}"
+
+        />
 
 
 
 </android.support.design.widget.CoordinatorLayout>
+</layout>
