--- a/11.TMDBClient/app/src/main/res/layout/content_movie.xml
+++ b/11.TMDBClient/app/src/main/res/layout/content_movie.xml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="secondaryMovie"
+            type="com.androidtutz.anushka.tmdbclient.model.Movie" />
+    </data>
+<RelativeLayout
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/background"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.androidtutz.anushka.tmdbclient.view.MovieActivity"
@@ -33,6 +40,7 @@
                     android:padding="16dp"
                     android:layout_marginTop="3dp"
                     android:textSize="20sp"
+                    android:text="@{secondaryMovie.title}"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_marginStart="16dp"
@@ -48,6 +56,7 @@
                     android:padding="16dp"
                     android:textSize="20sp"
                     app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle"
+                    android:text="@{Double.toString(secondaryMovie.voteAverage)}"
                     android:layout_marginStart="16dp"
                     app:layout_constraintLeft_toLeftOf="parent"
                     tools:layout_constraintTop_creator="1" />
@@ -56,6 +65,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvReleaseDate"
+                    android:text="@{secondaryMovie.releaseDate}"
                     android:layout_marginLeft="10dp"
                     android:padding="16dp"
                     android:textSize="20sp"
@@ -66,6 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvPlotsynopsis"
+                    android:text="@{secondaryMovie.overview}"
                     android:layout_marginLeft="10dp"
                     android:padding="16dp"
                     android:textSize="20sp"
@@ -83,3 +94,4 @@
     </LinearLayout>
 
 </RelativeLayout>
+</layout>
