--- a/11.TMDBClient/app/src/main/res/layout/movie_list_item.xml
+++ b/11.TMDBClient/app/src/main/res/layout/movie_list_item.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    >
+    <data>
+        <variable
+            name="movie"
+            type="com.androidtutz.anushka.tmdbclient.model.Movie" />
+    </data>
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:adjustViewBounds="true">
 
     <android.support.v7.widget.CardView
@@ -22,6 +30,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
                 android:id="@+id/ivMovie"
+                bind:posterPath="@{movie.posterPath}"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="fitXY"/>
 
@@ -33,6 +42,7 @@
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:paddingTop="10dp"
+                android:text="@{movie.title}"
                 android:textColor="@color/colorPrimary"
                 android:textSize="15dp"/>
 
@@ -45,6 +55,7 @@
                 android:paddingRight="10dp"
                 android:paddingBottom="5dp"
                 android:textColor="@color/colorAccent"
+                android:text="@{Double.toString(movie.voteAverage)}"
                 android:textSize="12dp"/>
 
         </RelativeLayout>
@@ -53,3 +64,4 @@
     </android.support.v7.widget.CardView>
 
 </LinearLayout>
+</layout>
